--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
     "http-server": "^14.1.1",
+    "nodemon": "^3.0.3",
     "three": "^0.160.1"
   }
 }
